# GEAP_P

./: .gitignore  README.md  find_scroll_cause.js  package-lock.json  package.json  pyproject.toml  server.js  server.py
agent_ui/: index.html
agent_ui/css/: agent-studio.min.css  chat.css  chat.min.css  insights.css  style.css  styles.css
agent_ui/js/: adk.js  agent-fabric.js  agents.js  app.js  chat.js  context.js  insights.js  settings.js
agents/.adk/: session.db
deployment/: deploy.py  requirements.txt
docs/: ADK_CHAT_ARCHITECTURE.md  ADK_INTEGRATION_PLAN.md  ADK_MEMORY_PLAN.md  ADK_WEB_FLOW.md  ARCHITECTURE.md  GEAP_Executive_Presentation.pptx  ROADMAP.md  SYSTEM_DOCUMENTATION.md
geap_agent/: __init__.py  agent.py  requirements.txt  server.py
geap_agent/.adk/: session.db
geap_agent/agents/: __init__.py  market_research_agent.py  market_research_super_agent.py  mortgage_agent.py  portfolio_agent.py  supervisor.py  support_agent.py  trade_agent.py
geap_agent/config/: container.py
geap_agent/models/: __init__.py  account.py  base.py  holdings.py  market.py  portfolio.py  quote.py  sector.py
geap_agent/prompts/: portfolio_prompt.py
geap_agent/services/: __init__.py  brokerage_service.py  static_brokerage_service.py
geap_agent/tools/: __init__.py
public/: index.html
public/css/: agent-fabric.css  agent-fabric.min.css  agent-studio.css  insights.min.css  settings.css  settings.min.css  styles.min.css
public/js/: agent-studio.js  charts.js  chat.js  data.js  gemini.js  planning.js  portfolios.js
scratch/: generate_presentation.py
(+19 files in other folders)
