[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "geap-agent"
version = "0.1.0"
description = "GEAP Agent — ADK-powered multi-agent financial advisor"
requires-python = ">=3.11"
dependencies = [
    "google-adk[gcp]",
    "google-cloud-firestore",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
]

[tool.setuptools.packages.find]
include = ["geap_agent*"]
